# cstore-inv

./: .gitignore  .secrets.toml  alembic.ini  main.py  pyproject.toml  settings.toml
alembic/: env.py
alembic/versions/: 2d4717528c96_001_first_attempt_to_create_address_.py  46c5847ef2ed_create_initial_tables.py  7bcc5d2a32af_fix_employee_email_field.py  8784a5bf3643_employee_table_implementation.py
app/: cli.py  config.py  default.toml  main.py  security.py
app/core/: settings.py
app/database/: __init__.py  db.py
app/models/: __init__.py  address.py  address_model.py  employee_model.py  phone_number.py  product_model.py  store.py  store_model.py
app/routers/: __init__.py  address.py  employee_route.py  phone_number.py  phone_number_route.py  store.py  store_route.py
app/schemas/: __init__.py  address.py  employee_schema.py  phone_number.py  phone_number_schema.py  product_schema.py  store.py  store_schema.py
app/services/: __init__.py  address.py  address_service.py  crud.py  employee_service.py  phone_number.py  store.py  store_service.py
app/utils/: __init__.py  responses.py
app/utils/responses/: phone_number_exceptions.py  responses.py
