[project]
name = "cstore-inv"
version = "0.1.0"
description = "Stock app"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "fastapi>=0.116.1",
    "setuptools>=80.9.0",
    "sqlmodel>=0.0.24",
    "typer>=0.16.0",
    "typer-cli>=0.16.0",
    "uvicorn>=0.35.0",
]

[project.scripts]
cstore = "app.cli:cli"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
