[project]
name = "cstore-inv"
version = "0.1.0"
description = "Stock app"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.116.1",
    "psycopg2>=2.9.10",
    "pydantic[email]>=2.11.7",
    "pydantic-settings>=2.10.1",
    "setuptools>=80.9.0",
    "sqlalchemy>=2.0.42",
    "sqlmodel>=0.0.24",
    "typer>=0.16.0",
    "typer-cli>=0.16.0",
    "uvicorn>=0.35.0",
    "alembic>=1.16.4",
    "dynaconf>=3.2.11",
    "passlib[bcrypt]>=1.7.4",
]

[project.scripts]
cstore = "app.cli:cli"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app", "alembic"]


